--- a/gjimenezS5B/gjimenezS5B.csproj
+++ b/gjimenezS5B/gjimenezS5B.csproj
@@ -67,7 +67,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Views\" />
+		<MauiXaml Update="Views\Principal.xaml">
+			<Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 	</ItemGroup>
 
 </Project>
